--- a/traditions.css
+++ b/traditions.css
@@ -1,5 +1,11 @@
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+
+}
 body{
- margin: 160px;   
+ /* margin: 160px;    */
  z-index: -12;
  background-image: url(wedbg.png);
  background-position: top;
@@ -7,24 +13,20 @@ body{
 /* .main{
 position: relative;
 } */
-.main{
-position: absolute;
+/* .main{
 margin: auto;
-left:0;
-top: 0;
-width: 99.5%;
+width: 100%;
 text-align: center;
 height: 400px;
-/* text-align: center; */
 border-bottom: 1px solid black; 
 font-family:'Pinyon Script', cursive;
-
-}
-.main-nav{
-    position: absolute; 
-    top: 6%;
-    left: 5%;
-    z-index: 1;
+} */
+ .main-nav{
+  width: 25%;
+  position: absolute;
+  top: 12%;
+  left: 6%;  
+  z-index: 1;
     }
     .main-nav a{
       text-decoration: none;
@@ -58,50 +60,132 @@ font-family:'Pinyon Script', cursive;
     .main-nav:hover .sub-list{
     display: block;
     margin-left: 30px;
-    } */
+    } 
     .opacity{
     opacity: 1;
+    }*/
+    .video{
+    
+margin-left: 50px;
+margin-right: 50px;
+z-index: -10;
+
     }
 .head-one{
     font-family:'Pinyon Script', cursive;  
+    margin-bottom: 30px;
 }
 .tradition{
-width: 95%;
-position: absolute;
-top: 1050px;
-right: 20px;
-left: 20px;
-margin: auto;
+
+width: 80%;
+margin:  30px auto ;
+left: 0%;
 font-family: 'Ovo', serif;
 font-weight: 400;
 font-size: 1.5rem;
 z-index: 100;
 background-color: rgba(255, 255, 255, 0.727); 
-border-top: 1px solid black;
+/* border-top: 1px solid black; */
 overflow: hidden;
-z-index: 0;
+z-index: 10;
+}
+.points{
+  color: darkgreen;
+  font-family:'Pinyon Script', cursive;  
+  font-weight: 500;
+  font-size: larger;
 }
 .second-section{
+  /* margin-top: 150px; */
+justify-content: center;
+  display: flex;
+ flex-direction: row;
+ gap: 10px;
  
-position: absolute;
-top: 2100px;
-left: 250px;
+}
+.card-one{
+display: flex;
+width: 40%;
 
 }
+.card-two{
+display: flex;
+width: 40%;
+}
 .main-footer{
-    min-height: 100%;
-    width: 100%;
+    /* height: 100%; */
+    width : 100%;
     background-color: rgb(239, 214, 89);  
     display: flex;
     flex-direction: row;
-    margin-top: 2100px;
-    }
-      .info{
+  
+  }
+.info{
     font-family: 'Pinyon Script';    
     color: rgb(1, 85, 8);
     display: inline-block;
-    margin: auto;
-    background-color: rgb(240, 240, 240);
+    margin:30px auto;
+    /* background-color: rgb(240, 240, 240); */
     text-align: center;
     font-size: 2rem;
+          } 
+
+@media screen and (max-width:1100px) {
+    .main-nav li{
+    font-family:'Pinyon Script', cursive;
+    margin: 2px;
+    color: rgb(210, 8, 8); 
+    background-color: rgba(208, 230, 14, 0.405);
+    border-radius: 15px;
+    padding: 2px;
+    text-align: center;
+    list-style: none;
+    font-size: 1rem;
+    /* float: right; */
+    }
+    .second-section{
+      /* margin-top: 150px; */
+    justify-content: center;
+      display: flex;
+     flex-direction: column;
+     gap: 10px;
+     
+    }
+    .card-one{
+      display: flex;
+      width: 20%;
+      background-color: red;
       }
+      .card-two{
+      display: flex;
+      width: 20%;
+      background-color: green;
+      }
+      .main-footer{
+        max-height: 100%;
+        width: 100%;
+        background-color: rgb(239, 214, 89);  
+       display: flex;
+        flex-direction: row; 
+      
+      }
+    .info{
+        font-family: 'Pinyon Script';    
+        color: rgb(1, 85, 8);
+        display: inline-block;
+        margin:30px auto;
+        /* background-color: rgb(240, 240, 240); */
+        text-align: center;
+        font-size: 1rem;
+              } 
+
+
+
+
+
+
+
+
+
+
+}
