--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
   font-family: 'Pinyon Script', cursive;
     font-weight: 100;
     font-style: normal;
-    background-color: rgba(248, 245, 173, 0.422);
+    background-color: #EFF3C4;
     height: 100%; 
   }
 .header{
@@ -118,7 +118,7 @@ transform: translateX(0);
 }
 .said-yes{
 width: 100%;
-background-color: rgba(148, 41, 35, 0.946);
+background-color: #566e2d;
 height: 300px;
 padding: 30px;
 background-image: url(images/wedbg.png);
@@ -141,7 +141,7 @@ letter-spacing: 25px;
 margin-bottom: 30px;
 font-size: 2.5rem;
 font-weight: 100;
-color: rgb(247, 236, 19);
+color: #eff3c4;
 filter: drop-shadow(2px,2px gray);
 animation-name: saidyes;
 animation-duration: 8s;
@@ -151,7 +151,7 @@ max-width: 1000px;
 margin: auto;
 text-align: center;
 font-size: 22px;
-color: rgb(247, 236, 19);
+color: #eff3c4;
 filter: drop-shadow(2px,2px gray);
 }
 .yes-para{
@@ -312,7 +312,7 @@ font-family: Ovo;
   }
   /* Slide show ends here*/
 .test{
-  background-color: rgba(148, 41, 35, 1);
+  background-color: #566e2d;
 min-height: 200px;
 position: relative;
 background-image: url(images/functionsbg.png);
@@ -325,7 +325,7 @@ background-repeat: no-repeat;
   .btn:link,
   .btn:visited{
 /* text-transform: uppercase; */
-background-color: white; 
+background-color: #eff3c4; 
 text-decoration: none;
 font-size: 2.5rem;
 border-radius: 50px; 
@@ -352,7 +352,7 @@ display: inline-block;
 height: 100%;
 width: 100%;
 border-radius: 100px;
-background-color: rgb(255, 255, 255);
+background-color: #eff3c4;
 position: absolute;
 top: 0;
 left: 0;
@@ -412,20 +412,21 @@ animation-name: names;
 display: flex;
 flex-direction: column;
 position: relative;
-width:50%;
-margin: 10px auto;
-background-color:rgb(142,185,54) ;
-min-height: 600px;
-background-image: url(images/wedbg.png);
+width:80%;
+padding-left: 30px;
+margin: 20px auto;
+background-color:#ffd3826f ;
+height: 400px;
+background-image: url(images/Henna2.jpg); 
 background-position: right;
 background-size:contain ;
 background-repeat: no-repeat;
-background-position-x: -350px;
-background-position-y: -00px;
+/* background-position-x: 1680px;
+background-position-y: -00px; */
 }
 .mehndi-invite{
 font-family: Pinyon script;  
-color: rgb(73, 115, 10);
+color: #566e2d;
 font-size: 3rem;
 text-align: center;
 margin-top: 15px;
@@ -433,54 +434,54 @@ margin-top: 15px;
 letter-spacing: 6px;
 font-weight: 400;
 }
-.mehndi-list li{
- color: rgb(81, 60, 8);   
+/* .mehndi-list li{
+  color: #fbece8;  
  font-family: 'Ovo';
 list-style: none;
-text-align: right;
-margin-top: 50px;
+text-align: left;
+margin-top: 10px;
 margin-right:20px;
 font-size: 1.5rem;
-margin-bottom: 80px;
+margin-bottom: 10px;
 animation-name: hitched;
 animation-duration: 5s;
 animation-delay: 4s;
 animation-fill-mode: backwards;
-}
+} */
 .google a{
 text-decoration: none;
 color: rgb(83,104,34);
 }
-.mehndi-detail{
+/* .mehndi-detail{
   font-family: 'Ovo';  
 max-width: 800px;
 text-align: center;
-font-size: 24px;
-color: rgb(81, 60, 8);  
+font-size: 1.5 rem;
+color: #fbece8; 
 margin: auto;
 
-}
+} */
 
 /*    The Wedding     */
 .part-three{
 
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width:50%;
-    margin: 10px auto;
-    background-color:#b8f76663 ;
-    min-height: 600px;
-    background-image: url(images/ganesh.png);
-    background-position: right;
-    background-size:contain ;
-    background-repeat: no-repeat;
-    background-position-x: -100px;
-    background-position-y: -30px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width:80%;
+  padding-left: 30px;
+  margin: 20px auto;
+  background-color:#ffd3826f ;
+  height: 400px;
+  background-image: url(images/rings.jpg); 
+  /* background-position: ; */
+  background-size:contain ;
+  background-repeat: no-repeat;
+  padding-bottom: -20px;
     }
     .wedding-invite{
       font-family: 'Pinyon Script', cursive; 
-    color: rgb(83, 104, 34);
+      color: #566e2d;
     font-size: 3rem;
     text-align: center;
     margin-top: 15px;
@@ -488,50 +489,49 @@ margin: auto;
     letter-spacing: 10px;
     font-weight: 400;
     }
-    .wedding-list li{
-     color: rgb(81, 60, 8);   
-     font-family: 'Ovo';
-    list-style: none;
-    text-align: right;
-    margin-top: 50px;
-    margin-right:20px;
-    font-size: 1.5rem;
-    margin-bottom: 70px;
-    animation-name: hitched;
-    animation-duration: 5s;
-    animation-delay: 6s;
-    animation-fill-mode: backwards;
-    }
+    /* .wedding-list li{
+      color: #fbece8;  
+    font-family: 'Ovo';
+list-style: none;
+text-align: right;
+margin-top: 10px;
+margin-right:20px;
+font-size: 1.5rem;
+margin-bottom: 10px;
+animation-name: hitched;
+animation-duration: 5s;
+animation-delay: 4s;
+animation-fill-mode: backwards;
+    } */
    
-    .wedding-detail{
+    /* .wedding-detail{
       font-family: 'Ovo';
-    max-width: 900px;
+    max-width: 1000px;
     text-align: center;
-    font-size: 24px;
-    color: rgb(81, 60, 8);  
+    font-size: 1.5rem;
+    color: #fbece8;
     margin: auto;
-    
-    }
+        
+    } */
 
     /*    The Reception     */
 .part-four{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width:50%;
-    margin: 10px auto;
-    background-color: rgba(148, 41, 35, 1);
-    min-height: 600px;
-    background-image: url(images/functionsbg.png);
-    background-position: left;
-    background-size:contain ;
-    background-repeat: no-repeat;
-    background-position-x: -90px;
-    background-position-y: 00px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width:80%;
+  padding-left: 30px;
+  margin: 20px auto;
+  background-color:#ffd3826f ;
+  height: 400px;
+  background-image: url(images/disco.jpg); 
+  background-position: right;
+  background-size:contain ;
+  background-repeat: no-repeat;
     }
     .reception-invite{
       font-family: 'Pinyon Script', cursive;
-    color: rgb(227, 170, 27);
+      color: #566e2d;
     font-size: 3rem;
     text-align: center;
     margin-top: 15px;
@@ -539,33 +539,32 @@ margin: auto;
     letter-spacing: 10px;
     font-weight: 400;
     }
-    .reception-list li{
-      color: rgb(227, 170, 27);
-     font-family: 'Ovo';
-    list-style: none;
-    text-align: right;
-    margin-top: 50px;
-    margin-right:20px;
-    font-size: 1.5rem;
-    margin-bottom: 80px;
-    animation-name: hitched;
-    animation-duration: 5s;
-    animation-delay: 8s;
-    animation-fill-mode: backwards;
-    /* filter: brightness(1.75); */
-    }
+    /* .reception-list li{
+      color: #fbece8;
+      font-family: 'Ovo';
+      list-style: none;
+      text-align: left;
+      margin-top: -30px;
+      margin-right:20px;
+      font-size: 1.5rem;
+      margin-bottom: 40px;
+      animation-name: hitched;
+      animation-duration: 5s;
+      animation-delay: 4s;
+      animation-fill-mode: backwards;
+    } */
     .google{
       font-size:small ;  
     }
-    .reception-detail{
-      font-family: 'Ovo'
-      ;
+    /* .reception-detail{
+      font-family: 'Ovo';
     max-width: 800px;
     text-align: center;
-    font-size: 24px;
-    color: rgb(227, 170, 27);
-    margin: auto;
-        }
+    font-size: 1.5rem;
+    color: #fbece8;
+    margin:  auto ;
+
+        } */
   .part-five{
 display: flex;
 flex-direction: row;
@@ -628,7 +627,7 @@ color: black;
   .main-footer{
 min-height: 300px;
 width: 100%;
-background-color: rgb(239, 214, 89); 
+background-color: #fbece8; 
 display: flex;
 flex-direction: row;
 }
