--- a/styles.css
+++ b/styles.css
@@ -118,11 +118,11 @@ transform: translateX(0);
 }
 .said-yes{
 width: 100%;
-background-color: #566e2d;
+/* background-color: #566e2d; */
 height: 300px;
 padding: 30px;
-background-image: url(images/wedbg.png);
-background-size: contain;
+background-image: url(images/rings3.jpg);
+background-size: cover;
 background-position: right;
 background-repeat: no-repeat;
 }
@@ -141,7 +141,7 @@ letter-spacing: 25px;
 margin-bottom: 30px;
 font-size: 2.5rem;
 font-weight: 100;
-color: #eff3c4;
+color: #1d1d1c;
 filter: drop-shadow(2px,2px gray);
 animation-name: saidyes;
 animation-duration: 8s;
@@ -151,7 +151,7 @@ max-width: 1000px;
 margin: auto;
 text-align: center;
 font-size: 22px;
-color: #eff3c4;
+color: #000000;
 filter: drop-shadow(2px,2px gray);
 }
 .yes-para{
