--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
   font-family: 'Pinyon Script', cursive;
     font-weight: 100;
     font-style: normal;
-    background-color: #EFF3C4;
+    background-color: #ffffff; 
     height: 100%; 
   }
 .header{
@@ -36,18 +36,18 @@ left: 2%;
 }
 .main-nav a{
   text-decoration: none;
-  color: red;  
+  color: rgb(255, 255, 255);  
 }
 .main-nav a:hover {
-background-color: rgb(128, 156, 141);
+/* background-color: rgb(128, 156, 141);
 border-radius: 30px;
 padding-right: 50px;
-padding-left: 50px;
+padding-left: 50px; */
 }
 .main-nav li{
  margin: 2px; 
 color: rgb(210, 8, 8); 
-background-color: rgba(208, 230, 14, 0.405);
+/* background-color: rgba(208, 230, 14, 0.405); */
 border-radius: 15px;
 padding: 2px;
 text-align: center;
@@ -71,7 +71,7 @@ opacity: 1;
 }
 .main-heading{
   font-family: Pinyon Script;
-background-color: rgba(222, 218, 154, 0.422);
+/* background-color: rgba(222, 218, 154, 0.422); */
 display: flex;
 flex-direction: column;
 width: 100%;
@@ -117,18 +117,20 @@ transform: translateX(0);
     }
 }
 .said-yes{
+
 width: 100%;
 /* background-color: #566e2d; */
 height: 300px;
 padding: 30px;
 background-image: url(images/rings3.jpg);
 background-size: cover;
-background-position: right;
+background-position: left;
 background-repeat: no-repeat;
+
 }
 @keyframes saidyes{
     0%{
-    transform:translateY(-600px) ;
+    transform:translateY(-800px) ;
      opacity: 0; 
     }
     100%{
@@ -137,11 +139,13 @@ background-repeat: no-repeat;
     }
 }
 .heading-two{
+  margin-top: 35px;
 letter-spacing: 25px;
-margin-bottom: 30px;
-font-size: 2.5rem;
-font-weight: 100;
-color: #1d1d1c;
+margin-bottom: 50px;
+font-size: 3.5rem;
+font-weight: 200;
+color: rgb(64, 99, 37);
+opacity: 1;
 filter: drop-shadow(2px,2px gray);
 animation-name: saidyes;
 animation-duration: 8s;
@@ -151,7 +155,7 @@ max-width: 1000px;
 margin: auto;
 text-align: center;
 font-size: 22px;
-color: #000000;
+color: rgb(64, 99, 37);
 filter: drop-shadow(2px,2px gray);
 }
 .yes-para{
@@ -312,7 +316,8 @@ font-family: Ovo;
   }
   /* Slide show ends here*/
 .test{
-  background-color: #566e2d;
+  background-color: #f6f6f6; 
+  
 min-height: 200px;
 position: relative;
 background-image: url(images/functionsbg.png);
@@ -325,7 +330,7 @@ background-repeat: no-repeat;
   .btn:link,
   .btn:visited{
 /* text-transform: uppercase; */
-background-color: #eff3c4; 
+background-color: #fdfdfd; 
 text-decoration: none;
 font-size: 2.5rem;
 border-radius: 50px; 
@@ -415,7 +420,7 @@ position: relative;
 width:80%;
 padding-left: 30px;
 margin: 20px auto;
-background-color:#ffd3826f ;
+background-color: #fbece8; 
 height: 400px;
 background-image: url(images/Henna2.jpg); 
 background-position: right;
@@ -471,7 +476,7 @@ margin: auto;
   width:80%;
   padding-left: 30px;
   margin: 20px auto;
-  background-color:#ffd3826f ;
+  background-color: #fbece8; 
   height: 400px;
   background-image: url(images/rings.jpg); 
   /* background-position: ; */
@@ -522,7 +527,7 @@ animation-fill-mode: backwards;
   width:80%;
   padding-left: 30px;
   margin: 20px auto;
-  background-color:#ffd3826f ;
+  background-color: #fbece8; 
   height: 400px;
   background-image: url(images/disco.jpg); 
   background-position: right;
@@ -627,7 +632,7 @@ color: black;
   .main-footer{
 min-height: 300px;
 width: 100%;
-background-color: #fbece8; 
+background-color: #ffffff; 
 display: flex;
 flex-direction: row;
 }
