--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,7 @@ padding-left: 30px;
 margin: 20px auto;
 background-color: #fffee0; 
 height: 400px;
-background-image: url(images/hennareal.jpg); 
+background-image: url(images/mehndi7.jpg); 
 background-position: right;
 background-size:contain ;
 background-repeat: no-repeat;
